--- a/templates/definitions_page.mustache
+++ b/templates/definitions_page.mustache
@@ -35,16 +35,6 @@
     </div>
 </div>
 
-<!--div class="text-right mt-2">
-        <span class="wordcards_display_options">
-            <button class="wordcards_display_option event_grid btn btn-primary" id="btn" title="{{#str}}grid, mod_wordcards{{/str}}">
-                <i class="fa fa-th"></i>
-            </button>
-            <button class="wordcards_display_option event_flashcards btn btn-outline-primary" title="{{#str}}flashcards, mod_wordcards{{/str}}">
-                <i class="fa fa-clone"></i>
-            </button>
-        </span>
-</div-->
 
     <div class="terms clearfix definition_flashcards">
       <!--start --->
@@ -92,32 +82,32 @@
           <!--end --->
        </div>
 
-       <div id="definitions-page-{{uniqid}}" class="definitions-container">
-    <div class="mt-3">
-    <div class="terms clearfix definition_grid">
-       {{#definitions}}
-       <div class="term-wrapper">
-          <div class="term {{#seen}}term-seen{{/seen}}" data-termid="{{id}}">
-             <div class="term-header">
-                 {{>mod_wordcards/my_words_button}}
-                <div class="term-title">
-                    {{term}}
-                    <i style="cursor:pointer;" data-modelaudio="{{audio}}" data-tts="{{term}}" data-ttsvoice="{{ttsvoice}}" class="fa fa-volume-up definition-play-tts"></i>
-                </div>
-                {{#model_sentence}}
-                <div class="term-modelsentence">
-                   <span style="cursor:pointer;" data-modelaudio="{{model_sentence_audio}}" data-tts="{{model_sentence}}" data-ttsvoice="{{ttsvoice}}" class="model-sentence-play-tts"> {{model_sentence}}</span>
-                </div>
-                {{/model_sentence}}
-             </div>
-             <div class="term-body">
-                {{{definition}}}
-             </div>
-          </div>
-
-       </div>
-       {{/definitions}}
-    </div>
+      <div id="definitions-page-{{uniqid}}" class="definitions-container">
+      <div class="mt-3">
+      <div class="terms clearfix definition_grid">
+         {{#definitions}}
+         <div class="term-wrapper">
+            <div class="term {{#seen}}term-seen{{/seen}}" data-termid="{{id}}">
+                  {{>mod_wordcards/my_words_button}}
+                  <div class="term-title">
+                     {{term}}
+                     <i style="cursor:pointer;" data-modelaudio="{{audio}}" data-tts="{{term}}" data-ttsvoice="{{ttsvoice}}" class="fa fa-volume-up definition-play-tts"></i>
+                  </div>
+                  {{#model_sentence}}
+                  <div class="term-modelsentence">
+                     <span style="cursor:pointer;" data-modelaudio="{{model_sentence_audio}}" data-tts="{{model_sentence}}" data-ttsvoice="{{ttsvoice}}" class="model-sentence-play-tts"> {{model_sentence}}</span>
+                  </div>
+                  {{/model_sentence}}
+                  {{{definition}}}
+                  {{#image}}
+                     <div class="term-image">
+                        <img src="{{image}}" class="flash_img" alt=""/>
+                     </div>
+                  {{/image}}
+            </div>
+         </div>
+         {{/definitions}}
+      </div>
 
        <div class="page-footer">
         {{#isstepsmode}}
