--- a/templates/my_words_button.mustache
+++ b/templates/my_words_button.mustache
@@ -1,4 +1,4 @@
-<a href="#" class="wordcards-my-words-action wordcards-mywords-action-{{id}} btn {{#isinmywords}}btn-primary{{/isinmywords}}{{^isinmywords}}btn-outline-primary{{/isinmywords}} pull-right"
+<a href="#" class="wordcards-my-words-action wordcards-mywords-action-{{id}} btn {{#isinmywords}}btn-primary{{/isinmywords}}{{^isinmywords}}btn-outline-primary{{/isinmywords}}"
    title="{{#isinmywords}}{{#str}}removefrommywords, wordcards{{/str}}{{/isinmywords}}{{^isinmywords}}{{#str}}addtomywords, wordcards{{/str}}{{/isinmywords}}"
    data-action="wordcards-set-my-words" data-termid="{{id}}" id="my-words">
     <i class="fa fa-check" aria-hidden="true"></i>
