--- a/styles.css
+++ b/styles.css
@@ -178,7 +178,7 @@
     font-size: 22px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: stretch;
     justify-content: space-around;
   }
 
@@ -1861,3 +1861,143 @@ button.definitions-next.btn .fa-arrow-right:before {
     display: none;
     border-radius: 0;
 }
+
+
+/* Model sentence for flashcards section*/
+
+.definition_flashcards .term-modelsentence {
+    background-color: #F7F5FE;
+    font-size: 16px;
+    padding: 24px;
+    line-height: 1.4;
+    margin-top: 48px;
+    margin-left: 18px;
+    margin-right: 18px;
+    border-radius: 8px;
+    position: relative;
+}
+
+@media screen and (min-width:600px) {
+    .definition_flashcards .term-modelsentence {
+        font-size: 18px;
+        padding: 36px;
+    }
+}
+
+.definition_flashcards .term-modelsentence h5 {
+    color: #745EE3;
+    text-transform: uppercase;
+    font-size: 9px;
+    font-style: normal;
+    font-weight: 600;
+    letter-spacing: 0.54px;
+    margin-bottom: 18px;
+    margin-top: -4px;
+}
+
+@media screen and (min-width:600px) {
+    .definition_flashcards .term-modelsentence h5 {
+        font-size: 10px;
+        margin-bottom: 24px;
+        margin-top: -10px;
+    }
+}
+
+.definition_flashcards .term-modelsentence-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.definition_flashcards .term-modelsentence-small {
+    height: 32px;
+    width: 32px;
+    border-radius: 100%;
+    border: 1px solid #6F58DE;
+    margin-top: 12px;
+    background-image: url([[pix:mod_wordcards|audio-icon-negative]]);
+    background-size: 14px 10px;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.definition_flashcards .term-modelsentence-small:hover {
+    background-color: #eae8f7;
+}
+
+.definition_flashcards .term-modelsentence-small:active {
+    background-color: #eae8f7;
+}
+
+/* Model sentence for definitions section*/
+
+.definitions-container .term-modelsentence {
+    font-size: 16px;
+    line-height: 1.5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 18px;
+    max-width: 80%;
+    text-align: center;
+    color: #8388b8;
+}
+
+@media screen and (min-width:600px) {
+    .definitions-container .term-modelsentence {
+        margin-left: 18px;
+        flex-direction: row;
+        margin-top: 0;
+        max-width: none;
+        text-align: left;
+    }
+}
+
+.definitions-container .term-modelsentence::before {
+    content: '';
+    display: block;
+    height: 28px;
+    width: 18px;
+    border-left: 1px solid #D7D9FF;
+    flex-shrink: 0;
+    display: none;
+}
+
+@media screen and (min-width:600px) {
+    .definitions-container .term-modelsentence::before {
+        display: block;
+    }
+}
+
+
+.definitions-container .term-modelsentence-small {
+    height: 28px;
+    width: 28px;
+    border-radius: 100%;
+    position: relative;
+    border: 1px solid #BABFE7;
+    background-color: #fff;
+    margin-left: 12px;
+    margin-right: 12px;
+    margin-top: 6px;
+    background-image: url([[pix:mod_wordcards|audio-icon-mini]]);
+    background-size: 16px 18px;
+    background-position: center;
+    background-repeat: no-repeat;
+    flex-shrink: 0;
+}
+
+@media screen and (min-width:600px) {
+    .definitions-container .term-modelsentence-small {
+        margin-top: 0;
+    }
+}
+
+.definitions-container .term-modelsentence-small:hover {
+    background-color: #eff1fd;
+}
+
+.definitions-container .term-modelsentence-small:active {
+    background-color: #c7cbf0;
+}
+
