--- a/templates/definitions_page.mustache
+++ b/templates/definitions_page.mustache
@@ -78,9 +78,11 @@
                            <button class="retrieve-image btn">
                            <button class="retrieve-video btn">
                         </div>
+                         {{#youglish.lang}}
                         <div class="term-video">
                            {{>mod_wordcards/youglish}}
                         </div>
+                         {{/youglish.lang}}
                      {{#image}}
                         <div class="term-image">
                            <img src="{{image}}" class="flash_img" alt=""/>
