--- a/templates/feedback.mustache
+++ b/templates/feedback.mustache
@@ -3,6 +3,10 @@
     <i class='fa fa-trophy'></i> {{totalcorrect}}/{{total}} {{#str}}correct, mod_wordcards{{/str}}
     <hr/>
     <i class='fa fa-clock-o'></i> {{prettytime}}
+    {{#gamescore}}
+      <hr/>
+      <i class='fa fa-star'></i> {{gamescore}} {{#str}}points, mod_wordcards{{/str}}
+    {{/gamescore}}
   </h2>
 </div>
 
