--- a/templates/youglish.mustache
+++ b/templates/youglish.mustache
@@ -1,1 +1,1 @@
-<div class="youglish-placeholder" data-term="{{term}}"></div>
+<div class="youglish-placeholder" data-term="{{term}}" data-lang="{{youglish.lang}}" data-accent="{{youglish.accent}}"></div>
