--- a/templates/word_wizard.mustache
+++ b/templates/word_wizard.mustache
@@ -34,7 +34,7 @@
                 }
 
                 //add placeholders for each word
-                var tdata = {'terms': allwords.split(',')};
+                var tdata = {'terms': allwords.split(/[\n,]/)};
                 log.debug(tdata);
                 templates.render('mod_wordcards/ww_skeletons',tdata).done(function(html, js) {
                     resultscont.html(html);
@@ -42,7 +42,9 @@
                     log.error(ex);
                 });
 
-                 dictlookup.getwords(allwords,'{{langterm}}',langdef);
+                //replace any new lines with commas
+                var allsearchwords = allwords.replace(/[\n]/g,',');
+                 dictlookup.getwords(allsearchwords,'{{langterm}}',langdef);
 
             });
 
