--- a/templates/keyboard.mustache
+++ b/templates/keyboard.mustache
@@ -13,7 +13,7 @@
   <div id='chunk-input-controls'>
     
     <div id='delete-chunk-input' class='btn-primary chunk-input-control'>
-      <i class='fa fa-caret-square-o-left'></i>
+      <i class='fa fa-times-rectangle-o'></i>
     </div>
     
     <div id='submit-chunk-input' class='btn-success chunk-input-control'>
