--- a/templates/freemode.mustache
+++ b/templates/freemode.mustache
@@ -72,7 +72,7 @@
                 </a>
             {{/stepsmodeavailable}}
         </div>
-        <div class="col-md-9">
+        <div class="col-md-9 wordcards-freemode-mainstage">
             {{^isintropage}}
                 <div>{{{intro}}}</div>
                 <div>{{{mainhtml}}}</div>
