--- a/styles.css
+++ b/styles.css
@@ -2036,3 +2036,20 @@ button.definitions-next.btn .fa-arrow-right:before {
         max-width: 74%;
     }
 }
+
+.learned-progress-bar {
+    width: 35px;
+    height: 7px;
+    background-color: #F7F5FE;
+    position: relative;
+    margin-top: 3px;
+}
+
+.learned-progress-bar::before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: attr(data-progress); /* Use the data-progress attribute to determine the width */
+    background-color: #5560F3; /* Set the color of the progress */
+    transition: width 0.3s ease; /* Add a smooth transition effect */
+}
