made images on definitions-as-header in match type and match select appear under long definitions

--- a/styles.css
+++ b/styles.css
@@ -2051,3 +2051,7 @@ button.definitions-next.btn .fa-arrow-right:before {
     background-color: #5560F3; /* Set the color of the progress */
     transition: width 0.3s ease; /* Add a smooth transition effect */
 }
+.definition_as_header {
+    font-weight: bolder;
+    z-index: 1;
+}
